--- a/0.html
+++ b/0.html
@@ -3,12 +3,21 @@
 <head>
   <title>Mokgam History_start_game</title>
   <meta charset="utf-8">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DPSHFZW46W"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DPSHFZW46W');
+</script>
 </head>
 
 <body>
   <h1>참여방법 설명</h1>
   <p>원활한 게임 참여를 위해서 방법을 설명해드리겠습니다.<br>아래 파란 버튼이 보이시죠?<br>이런 버튼이 나오면 클릭하면 됩니다.</p>
-  
+
 </body>
 
 </html>
