--- a/0-1.html
+++ b/0-1.html
@@ -3,6 +3,15 @@
 <head>
   <title>Mokgam History_guide_book</title>
   <meta charset="utf-8">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DPSHFZW46W"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DPSHFZW46W');
+</script>
 </head>
 
 <body>
