방법 설명 하는 중

--- a/1desc.html
+++ b/1desc.html
@@ -10,16 +10,16 @@
 
     gtag('config', 'G-DPSHFZW46W');
   </script>
-  <title>Mokgam History_start_game</title>
+  <title>참여방법_설명</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <h1>참여방법 설명</h1>
-  <p>원활한 게임 참여를 위해서 방법을 설명해드리겠습니다.<br>아래 초록색 버튼이 보이시죠?<br>이런 버튼이 나오면 클릭하면 됩니다.</p>
-  <a href="1desc.html" class="button">알겠습니다. </a>
+  <p>위에 '문제의 정답을 써보세요.'가 보이시죠? <br>
+      빈칸에 답을 입력하고 '정답 확인하기'를 누르면 됩니다.<br>
+      정답이 아니면, 다음 장으로 넘어가지 않습니다.<br> </p>
+  <h2>연습 문제: 지금은 12월인데, 12월은 어떤 계절일까요 ?</h2>
 
 </body>
-
 </html>
