--- a/duplicate.html
+++ b/duplicate.html
@@ -10,16 +10,13 @@
 
     gtag('config', 'G-DPSHFZW46W');
   </script>
-  <title>Mokgam History_start_game</title>
+  <title></title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <h1>참여방법 설명</h1>
-  <p>원활한 게임 참여를 위해서 방법을 설명해드리겠습니다.<br>아래 초록색 버튼이 보이시죠?<br>이런 버튼이 나오면 클릭하면 됩니다.</p>
-  <a href="1desc.html" class="button">알겠습니다. </a>
+
 
 </body>
-
 </html>
