--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 
     gtag('config', 'G-DPSHFZW46W');
   </script>
+
   <title>Mokgam History</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
 
 </head>
 
@@ -20,23 +22,26 @@
 
   <img src="img1.jpg" width="80%">
 
-  <p><h3>안녕하세요!
-  <strong>시흥시 목감지구 역사 게임</strong>에 오신 것을 환영합니다.</h3></p>
-  <p>- <u>온라인</u>에서 진행됩니다. (현장 X)<br>
-  - 약 <u>10~15분</u> 정도 소요됩니다.<br>
-  - 부모님, 선생님은 아래 가이드를 참고해주세요.<br>
-  - 컴퓨터는 크롬에서, 휴대폰은 네이버 앱에서 하시면 좋습니다.<br></p>
+  <h3>안녕하세요! 시흥시 목감지구 역사 게임에 오신 것을 환영합니다.</h3>
 
-  <ul>
-    <li><h3><a href="0.html">참여한다.</a></h3></li>
-    <li><h3><a href="0-1.html">부모님과 선생님을 위한 가이드북</a></h3></li>
-  </ul>
+  <p style="margin-bottom:30px;">
+    - <u>온라인</u>에서 진행됩니다. (현장 X)<br>
+    - 약 <u>10~15분</u> 정도 소요됩니다.<br>
+    - 부모님, 선생님은 아래 가이드를 참고해주세요.<br>
+    - 컴퓨터는 크롬에서, 휴대폰은 네이버 앱에서 하시면 좋습니다.<br>
+  </p>
 
-  <p style="margin-top:40px;">- 만든 날: 2020년 12월<br>
+
+  <a href="0.html" class="button">참여한다.</a>
+  <a href="0-1.html" class="button">부모님과 선생님을 위한 가이드북</a>
+
+
+  <p style="margin-top:40px;" class="addes">- 만든 날: 2020년 12월<br>
   - 만든 이: 김서인 (서강대학교 사학과 학부생, tjdls111@naver.com) 과제의 일환으로 제작하였습니다.<br></p>
-  <p style="margin-top:45px;">- 사진은 모두 출처를 표기했고, 출처 표기하지 않은 사진은 김서인이 촬영했습니다.<br>
+  <p style="margin-top:45px;" class="addes">- 사진은 모두 출처를 표기했고, 출처 표기하지 않은 사진은 김서인이 촬영했습니다.<br>
   - 이미지/캐릭터: 미리캔버스<br>
   - 오일팔닷컴의 제작 방법 소개를 참고했습니다. <a href="https://sites.google.com/view/51840escape/%EC%A0%9C%EC%9E%91-%EB%B0%A9%EB%B2%95-%EC%86%8C%EA%B0%9C?authuser=0" target="_blank" title="오일팔닷컴의 제작 방법 소개">링크 </a></p>
+
 
 </body>
 </html>
