--- a/0-1.html
+++ b/0-1.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -41,7 +41,9 @@
   <li><h3>게임의 등장인물 '김지훈'은 실제 인물인가요?</h3>
   <h4>가상의 인물입니다.</h4></li></or>
 
-  <a href="0.html" class="button">게임 시작하기 </a>
+  <input type="button" value="게임 시작하기" onclick="
+    location.href='0.html';
+    ">
 
 
   <p style="margin-top:45px;" class="addes">
