--- a/0.html
+++ b/0.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -17,8 +17,10 @@
 
 <body>
   <h1>참여방법 설명</h1>
-  <p>원활한 게임 참여를 위해서 방법을 설명해드리겠습니다.<br>아래 초록색 버튼이 보이시죠?<br>이런 버튼이 나오면 클릭하면 됩니다.</p>
-  <a href="1desc.html" class="button">알겠습니다. </a>
+  <p>원활한 게임 참여를 위해서 방법을 설명해드리겠습니다.<br>아래 버튼이 보이시죠?<br>이런 버튼이 나오면 클릭하면 됩니다.</p>
+  <input type="button" value="알겠습니다" onclick="
+    location.href='1desc.html';
+    ">
 
 </body>
 
