--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -31,10 +31,10 @@
     - 컴퓨터는 크롬에서, 휴대폰은 네이버 앱에서 하시면 좋습니다.<br>
   </p>
 
-
-  <a href="0.html" class="button">참여한다.</a>
-  <a href="0-1.html" class="button">부모님과 선생님을 위한 가이드북</a>
-
+  <input type="button" value="게임하기" onclick="
+   location.href='0.html'">
+  <input type="button" value="부모님과 선생님을 위한 가이드북" onclick="
+   location.href='0-1.html'">
 
   <p style="margin-top:40px;" class="addes">- 만든 날: 2020년 12월<br>
   - 만든 이: 김서인 (서강대학교 사학과 학부생, tjdls111@naver.com) 과제의 일환으로 제작하였습니다.<br></p>
