--- a/2desc.html
+++ b/2desc.html
@@ -13,6 +13,7 @@
   <title>Mokgam History_start_game</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
+  <style>@import url('https://fonts.googleapis.com/css2?family=Poor+Story&display=swap');</style>
 </head>
 
 <body>
