--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-
     gtag('config', 'G-DPSHFZW46W');
   </script>
 
   <title>Mokgam History</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
-
+  <style>@import url('https://fonts.googleapis.com/css2?family=Poor+Story&display=swap');</style>
 </head>
 
 <body>
