--- a/1guidebook.html
+++ b/1guidebook.html
@@ -14,6 +14,7 @@
     <meta charset="utf-8">
 
   <link rel="stylesheet" href="style.css">
+  <style>@import url('https://fonts.googleapis.com/css2?family=Poor+Story&display=swap');</style>
 </head>
 
 <body>
