--- a/3desc.html
+++ b/3desc.html
@@ -13,6 +13,7 @@
     <title>참여방법_설명</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
+    <style>@import url('https://fonts.googleapis.com/css2?family=Poor+Story&display=swap');</style>
   </head>
 
   <body>
