--- a/3desc.html
+++ b/3desc.html
@@ -25,7 +25,7 @@
     </script>
 
 
-    <h1>참여방법 설명</h1>
+    <h1>참여방법 설명  &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp <img src="home.png" width=45px onclick="location.href='index.html';"> &nbsp &nbsp <img src="back.png" width=45px onclick="location.href='2desc.html';"></h1>
     <script>
       document.write('빈칸에 답을 입력하고 정답 확인하기 버튼를 누르면 됩니다.<br>정답이 아니면, 다음 장으로 넘어가지 않습니다.');
     </script>
