--- a/1guidebook.html
+++ b/1guidebook.html
@@ -18,6 +18,11 @@
 </head>
 
 <body>
+  <div class="hero-image">
+  <div class="hero-text">
+    <h1 id="hero_text">시흥시 목감지구 역사 게임</h1>
+  </div>
+</div>
   <h1>가이드북  &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp <img src="home.png" width=45px onclick="location.href='index.html';"></h1>
   <ol>
   <li><h3>이것이 무엇인가요?</h3>
