--- a/3desc.html
+++ b/3desc.html
@@ -24,7 +24,11 @@
     }
     </script>
 
-
+    <div class="hero-image">
+    <div class="hero-text">
+      <h1 id="hero_text">시흥시 목감지구 역사 게임</h1>
+    </div>
+  </div>
     <h1>참여방법 설명  &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp <img src="home.png" width=45px onclick="location.href='index.html';"> &nbsp &nbsp <img src="back.png" width=45px onclick="location.href='2desc.html';"></h1>
     <script>
       document.write('빈칸에 답을 입력하고 정답 확인하기 버튼를 누르면 됩니다.<br>정답이 아니면, 다음 장으로 넘어가지 않습니다.');
