--- a/index.html
+++ b/index.html
@@ -17,9 +17,13 @@
 </head>
 
 <body>
-  <h1>시흥시 목감지구 역사 게임(프로토 타입)</h1>
+  <div class="hero-image">
+  <div class="hero-text">
+    <h1 id="hero_text">시흥시 목감지구 역사 게임</h1>
+  </div>
+</div>
 
-  <img src="img1.jpg" width="80%">
+  <img src="img1.jpg" width="100%">
 
   <h3>안녕하세요! 시흥시 목감지구 역사 게임에 오신 것을 환영합니다.</h3>
 
