--- a/1guidebook.html
+++ b/1guidebook.html
@@ -19,14 +19,16 @@
 
 <body>
   <div class="hero-image">
-  <div class="hero-text">
-    <h1 id="hero_text">시흥시 목감지구 역사 게임</h1>
+    <div class="hero-text">
+      <h1 id="hero_text">시흥시 목감지구 역사 게임</h1>
+    </div>
   </div>
-</div>
-  <h1>가이드북  &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp <img src="home.png" width=45px onclick="location.href='index.html';"></h1>
+  <h1><img src="home.png" width=45px onclick="location.href='index.html';">&nbsp &nbsp 가이드북  </h1>
   <ol>
   <li><h3>이것이 무엇인가요?</h3>
-  <h4>교육용으로 만든, 실내에서 모바일로 참여할 수 있는 방 탈출, 퀴즈 형식의 게임입니다. 경기도 시흥시 목감지구, 근처의 지역사 교육을 목적으로 만들었습니다. <br>3· 1운동(독립지사 윤동욱 기념비), 조선시대 무덤(이숙번 묘), 고인돌(조남리 지석묘), 물왕 저수지와 관련 있습니다.</h4>
+  <h4>교육용으로 만든, 실내에서 모바일로 참여할 수 있는 방 탈출, 퀴즈 형식의 게임입니다.
+    경기도 시흥시 목감지구, 근처의 지역사 교육을 목적으로 만들었습니다. <br>
+    3· 1운동(독립지사 윤동욱 기념비), 조선시대 무덤(이숙번 묘), 고인돌(조남리 지석묘), 물왕 저수지와 관련 있습니다.</h4>
 
   <li><h3>얼마나 걸리나요?</h3>
   <h4>10~15분 정도 걸립니다.</h4></li>
@@ -51,12 +53,11 @@
     location.href='2desc.html';
     ">
 
-
-  <p style="margin-top:45px;" class="addes">
-  이 프로그램은 오일팔닷컴의 제작 방법을 바탕으로, 서강대학교 '교육연구법' 과제의 일환으로 김서인이 제작했습니다.<br>
-
-  오일팔닷컴의 제작 방법: <a href="https://sites.google.com/view/51840escape/%EC%A0%9C%EC%9E%91-%EB%B0%A9%EB%B2%95-%EC%86%8C%EA%B0%9C?authuser=0" target="_blank" title="오일팔닷컴의 제작 방법 소개">오일팔닷컴의 제작 방법 소개 </a><br>
-  문의사항은 다음 메일로 연락주세요: tjdls111@naver.com (김서인)</p>
+  <p class="addes">
+  이 프로그램은 오일팔닷컴의 제작 방법을 바탕으로, 2020학년도 2학기 서강대학교 '교육연구법' 과제의 일환으로 김서인이 제작했습니다.<br>
+  오일팔닷컴의 제작 방법: <a href="https://sites.google.com/view/51840escape/%EC%A0%9C%EC%9E%91-%EB%B0%A9%EB%B2%95-%EC%86%8C%EA%B0%9C?authuser=0" class="link" target="_blank" title="오일팔닷컴의 제작 방법 소개">오일팔닷컴의 제작 방법 소개 </a>
+  문의사항은 다음 메일로 연락주세요: tjdls111@naver.com (김서인)
+  </p>
 
 
 </body>
