--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
    location.href='1guidebook.html'">
 
   <p style="margin-top:40px;" class="addes">- 만든 날: 2020년 12월<br>
-  - 만든 이: 김서인 (서강대학교 사학과 학부생, tjdls111@naver.com) 과제의 일환으로 제작하였습니다.<br></p>
-  <p style="margin-top:45px;" class="addes">- 사진은 모두 출처를 표기했고, 출처 표기하지 않은 사진은 김서인이 촬영했습니다.<br>
+  - 만든 이: 김서인 (서강대학교 사학과 학부생, tjdls111@naver.com) 과제의 일환으로 제작하였습니다.<br>
+  - 사진은 모두 출처를 표기했고, 출처 표기하지 않은 사진은 김서인이 촬영했습니다.<br>
   - 이미지/캐릭터: 미리캔버스<br>
-  - 오일팔닷컴의 제작 방법 소개를 참고했습니다. <a href="https://sites.google.com/view/51840escape/%EC%A0%9C%EC%9E%91-%EB%B0%A9%EB%B2%95-%EC%86%8C%EA%B0%9C?authuser=0" target="_blank" title="오일팔닷컴의 제작 방법 소개">링크 </a></p>
+  - 오일팔닷컴의 제작 방법 소개를 참고했습니다. <a class="link" href="https://sites.google.com/view/51840escape/%EC%A0%9C%EC%9E%91-%EB%B0%A9%EB%B2%95-%EC%86%8C%EA%B0%9C?authuser=0" target="_blank" title="오일팔닷컴의 제작 방법 소개">링크 </a></p>
 
 
 </body>
