--- a/1guidebook.html
+++ b/1guidebook.html
@@ -34,10 +34,10 @@
   <h4>10~15분 정도 걸립니다.</h4></li>
 
   <li><h3>어디서 하나요?</h3>
-  <h4>어디에서나(집, 학교 등) 모바일로 할 수 있습니다.</h4></li>
+  <h4>어디에서나(집, 학교 등) 컴퓨터로 할 수 있습니다. </h4></li>
 
   <li><h3>준비물이 있나요?</h3>
-  <h4>PC가 필요합니다. </h4></li>
+  <h4>PC와 와이파이가 있으면 됩니다~  </h4></li>
 
   <li><h3>난이도는 어떤가요?</h3>
   <h4>초등학생 2학년 정도부터 할 수 있다고 예상합니다. 어려울 경우, 힌트를 참고할 수 있습니다.</h4></li>
