--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     - <u>온라인</u>에서 진행됩니다. (현장 X)<br>
     - 약 <u>10~15분</u> 정도 소요됩니다.<br>
     - 부모님, 선생님은 아래 가이드를 참고해주세요.<br>
-    - 컴퓨터는 크롬에서, 휴대폰은 네이버 앱에서 하시면 좋습니다.<br>
+    - 컴퓨터는 크롬에서 하시면 좋습니다. 다른 기기로 하기에는 사이즈 문제로 어려움이 있으실텐데, 추후 보완할 예정입니다.<br>
   </p>
 
   <input type="button" value="게임하기" onclick="
