--- a/1guidebook.html
+++ b/1guidebook.html
@@ -44,7 +44,7 @@
 
 
   <li><h3>어떤 자료를 참고했는지 궁금해요!</h3>
-  <h4>참고자료를 클릭해주세요.</h4></li>
+  <h4><a href="reference.html" target="_blank"> 참고자료</a>를 클릭해주세요.</h4></li>
 
   <li><h3>게임의 등장인물 '김지훈'은 실제 인물인가요?</h3>
   <h4>가상의 인물입니다.</h4></li></or>
@@ -55,7 +55,7 @@
 
   <p class="addes">
   이 프로그램은 오일팔닷컴의 제작 방법을 바탕으로, 2020학년도 2학기 서강대학교 '교육연구법' 과제의 일환으로 김서인이 제작했습니다.<br>
-  오일팔닷컴의 제작 방법: <a href="https://sites.google.com/view/51840escape/%EC%A0%9C%EC%9E%91-%EB%B0%A9%EB%B2%95-%EC%86%8C%EA%B0%9C?authuser=0" class="link" target="_blank" title="오일팔닷컴의 제작 방법 소개">오일팔닷컴의 제작 방법 소개 </a>
+  오일팔닷컴의 제작 방법: <a href="https://sites.google.com/view/51840escape/%EC%A0%9C%EC%9E%91-%EB%B0%A9%EB%B2%95-%EC%86%8C%EA%B0%9C?authuser=0" target="_blank" title="오일팔닷컴의 제작 방법 소개">오일팔닷컴의 제작 방법 소개 </a>
   <br>문의사항은 다음 메일로 연락주세요: tjdls111@naver.com (김서인)
   </p>
 
