--- a/1guidebook.html
+++ b/1guidebook.html
@@ -44,7 +44,7 @@
 
 
   <li><h3>어떤 자료를 참고했는지 궁금해요!</h3>
-  <h4><a href="reference.html" target="_blank"> 참고자료</a>를 클릭해주세요.</h4></li>
+  <h4><a href="reference.html"> 참고자료</a>를 클릭해주세요.</h4></li>
 
   <li><h3>게임의 등장인물 '김지훈'은 실제 인물인가요?</h3>
   <h4>가상의 인물입니다.</h4></li></or>
