--- a/reference.html
+++ b/reference.html
@@ -17,73 +17,74 @@
 </head>
 
 <body>
-  <h1 style="text-align:center;"> <img src="home.png" width=45px onclick="location.href='index.html';">&nbsp&nbsp참고 문헌</h1>
+  <header><h1 style="text-align:center;"> <img src="home.png" width=45px onclick="location.href='index.html';">&nbsp&nbsp참고 문헌</h1></header>
+  <main>
+    <ol style="margin:0px 5vh;">
+      <li>일반 단행본
+        <ul>
+          <li>양호환, 이영효, 김한종, 정선영, 송상헌(2009). 『역사교육의 이론』. 책과 함께</li>
 
-  <ol style="margin:0px 5vh;">
-    <li>일반 단행본
-      <ul>
-        <li>양호환, 이영효, 김한종, 정선영, 송상헌(2009). 『역사교육의 이론』. 책과 함께</li>
+          <li>최상훈, 이영효, 김한종, 강선주(2007). 『역사교육의 내용과 방법』. 책과 함께</li>
+        </ul>
+      </li>
 
-        <li>최상훈, 이영효, 김한종, 강선주(2007). 『역사교육의 내용과 방법』. 책과 함께</li>
-      </ul>
-    </li>
+      <br>
+      <li>학술 논문
+        <ul>
+          <li>강신겸, 최승담(2002). 「관광지 지역주민의 지역사회 애착도 측정척도 개발」. 『관광학연구』, 26(1), 103-117</li>
+          <li>권오양, 유정민(2019). 「문화유산 관광 경험 향상을 위한 모바일 증강현실 기반 역사탐방 게임 플랫폼 설계-부여를 중심으로」. 『한국컴퓨터정보학회 학술발표논문집』, 27(2)</li>
+          <li>김민정(2018). 「역사과 교사교육과 지역사 탐구체험학습의 실현 가능성」. 『역사교육논집』, 66</li>
+          <li>김영현(2020). 「교육용 게임을 활용한 초등학교 게이미피케이션 사회수업의 교육적 효과 분석」. 『한국게임학회 논문지』, 20(5)</li>
+          <li>김은경(2019). 「연령별 문화재 교육의 필요성과 활성화 방안-'돌돌탐험대'와 '고고학 체험교실' 사례를 중심으로」. 『야외고고학』, 35</li>
+          <li>김한종(2009). 「교육의 지역화와 지방사 교육의 방향-충청 지방사를 사례로」. 『사회과학교육연구』, 10</li>
+          <li>박성진, 김상균(2018). 게이미피케이션 개발 방법론- 4F Process 설계 및 비교 분석. 『한국디지털콘텐츠학회 논문지』, 19(6)</li>
+          <li>박성진, 김상균(2018.10). 「게이미피케이션 개발을 위한 게임 메커닉스와 PLEX 최적 개수」. 한국디지털콘텐츠학회 논문지, 19(10), 2009-2017</li>
+          <li>박성진, 김상균(2018.11). 게이미피케이션 설계를 위한 플레이어 유형 별 PLEX 재미 경험 선호도 분석. 『한국디지털콘텐츠학회 논문지』, 19(11), 2227-2234</li>
+          <li>박주현(2011). 「역사 탐구 체험으로서의 영국의 지역사 교육」. 『역사교육연구』, (14)</li>
+          <li>심은지, 최승언, 김찬종(2019). 「고등학생의 과학의 본성 이해를 위한 과학사 롤플레잉게임(SHRPG) 개발 및 적용- 대륙이동설 스토리텔링을 중심으로」. Journal of the Korean Association for Science Education, 39(1), 45-57</li>
+          <li>안미리, 염주영, 김선용, 정지연(2020). 「국내 게임기반학습과 교육 게이미피케이션 설계연구에 대한 체계적 문헌분석」. 『교육정보미디어연구』, 26(3)</li>
+          <li>이영원(2010). 「지역 특성에 따른 지역 정체성과 지역 만족도에 대한 연구-전주, 무주 지역을 중심으로」. 『사회과학연구』, 49</li>
+          <li>김서진, 이예경(2018). 「증강현실 활용 독서가 역사 독서 몰입, 흥미 및 지식 습득에 미치는 영향」. 『디지털융복합연구』, 16(10), 453-463</li>
+          <li>정미아, 정형원(2020). 교육용 온라인 게임의 교육적 요소 분석-레알팜 게임을 중심으로. 『한국엔터테인먼트산업학회논문지』, 14(3), 173-180</li>
+          <li>함초롬, 유정민(2020). 「Gamification을 통한 지속적인 문화재 교육 앱 디자인-한국 도자사를 중심으로」. 『한국컴퓨터정보학회 학술발표논문집』, 28(2)</li>
+          <li>Sangkyun Kim(2013). Analysis of Engineering Students' Needs for Gamification based on PLEX Model. Journal on Knowledge and Data Engineering(JKDE), 1(1)</li>
+        </ul>
+      </li>
 
-    <br>
-    <li>학술 논문
-      <ul>
-        <li>강신겸, 최승담(2002). 「관광지 지역주민의 지역사회 애착도 측정척도 개발」. 『관광학연구』, 26(1), 103-117</li>
-        <li>권오양, 유정민(2019). 「문화유산 관광 경험 향상을 위한 모바일 증강현실 기반 역사탐방 게임 플랫폼 설계-부여를 중심으로」. 『한국컴퓨터정보학회 학술발표논문집』, 27(2)</li>
-        <li>김민정(2018). 「역사과 교사교육과 지역사 탐구체험학습의 실현 가능성」. 『역사교육논집』, 66</li>
-        <li>김영현(2020). 「교육용 게임을 활용한 초등학교 게이미피케이션 사회수업의 교육적 효과 분석」. 『한국게임학회 논문지』, 20(5)</li>
-        <li>김은경(2019). 「연령별 문화재 교육의 필요성과 활성화 방안-'돌돌탐험대'와 '고고학 체험교실' 사례를 중심으로」. 『야외고고학』, 35</li>
-        <li>김한종(2009). 「교육의 지역화와 지방사 교육의 방향-충청 지방사를 사례로」. 『사회과학교육연구』, 10</li>
-        <li>박성진, 김상균(2018). 게이미피케이션 개발 방법론- 4F Process 설계 및 비교 분석. 『한국디지털콘텐츠학회 논문지』, 19(6)</li>
-        <li>박성진, 김상균(2018.10). 「게이미피케이션 개발을 위한 게임 메커닉스와 PLEX 최적 개수」. 한국디지털콘텐츠학회 논문지, 19(10), 2009-2017</li>
-        <li>박성진, 김상균(2018.11). 게이미피케이션 설계를 위한 플레이어 유형 별 PLEX 재미 경험 선호도 분석. 『한국디지털콘텐츠학회 논문지』, 19(11), 2227-2234</li>
-        <li>박주현(2011). 「역사 탐구 체험으로서의 영국의 지역사 교육」. 『역사교육연구』, (14)</li>
-        <li>심은지, 최승언, 김찬종(2019). 「고등학생의 과학의 본성 이해를 위한 과학사 롤플레잉게임(SHRPG) 개발 및 적용- 대륙이동설 스토리텔링을 중심으로」. Journal of the Korean Association for Science Education, 39(1), 45-57</li>
-        <li>안미리, 염주영, 김선용, 정지연(2020). 「국내 게임기반학습과 교육 게이미피케이션 설계연구에 대한 체계적 문헌분석」. 『교육정보미디어연구』, 26(3)</li>
-        <li>이영원(2010). 「지역 특성에 따른 지역 정체성과 지역 만족도에 대한 연구-전주, 무주 지역을 중심으로」. 『사회과학연구』, 49</li>
-        <li>김서진, 이예경(2018). 「증강현실 활용 독서가 역사 독서 몰입, 흥미 및 지식 습득에 미치는 영향」. 『디지털융복합연구』, 16(10), 453-463</li>
-        <li>정미아, 정형원(2020). 교육용 온라인 게임의 교육적 요소 분석-레알팜 게임을 중심으로. 『한국엔터테인먼트산업학회논문지』, 14(3), 173-180</li>
-        <li>함초롬, 유정민(2020). 「Gamification을 통한 지속적인 문화재 교육 앱 디자인-한국 도자사를 중심으로」. 『한국컴퓨터정보학회 학술발표논문집』, 28(2)</li>
-        <li>Sangkyun Kim(2013). Analysis of Engineering Students' Needs for Gamification based on PLEX Model. Journal on Knowledge and Data Engineering(JKDE), 1(1)</li>
-      </ul>
-    </li>
+     <br>
+     <li>학위 논문
+       <ul>
+          <li>강주희(2013). 「학교도서관의 역사중심 독서교육이 초등학생의 역사흥미에 미치는 영향-초등학교 3학년 학생을 대상으로-」. 경기대학교 교육대학원 사서교육전공 석사학위논문</li>
+          <li>김양(2012). 「중등학교에서의 효과적인 지방사 교수-학습 방안 연구」. 전남대학교 교육대학원 교육학과 역사교육전공 석사학위 논문</li>
+          <li>모웅서(2015). 「문화재 학습을 통한 초등학생의 역사인식 변화-철원지역 문화재를 중심으로」. 고려대학교 교육대학원 역사교육전공 석사학위논문</li>
+          <li>심은지(2019). 「고등학생의 과학의 본성 이해를 위한 과학사 롤플레잉게임(SHRPG) 개발 : 대륙이동설 스토리텔링을 중심으로」. 서울대학교 대학원 지구과학전공 석사학위논문</li>
+          <li>오명숙(2020). 「제주 지역사 교육을 위한 초등학교 연계의 박물관 문화재 활용 교육 연구」. 제주대학교 교육대학원 역사교육전공 석사학위논문</li>
+          <li>오아란(2017). 「인천지역 고등학생의 지역정체성과 지역사 학습 방안 연구-인천시립박물관 프로그램을 통하여」. 고려대학교 교육대학원 역사교육전공 석사학위논문</li>
+          <li>윤은미(2010). 「강화도 지역의 현장학습을 통한 향토사 교수학습방안」. 이화여자대학교 교육대학원 역사교육전공 석사학위논문</li>
+          <li>이명희(2009). 「고등학교 역사수업에서 지역관련 영상자료 활용방안-마산지역의 한국 근현대사를 중심으로」. 강원대학교 한국사교육 석사 학위</li>
+          <li>임예윤(2020). 「박물관을 통한 지역사 하기 교수 학습 방안 연구」. 서강대학교 교육대학원 역사교육과 석사학위논문</li>
+          <li>정형원(2004). 「교육용 게임을 위한 게임요소의 분석 및 연구」. 상명대학교 뉴미디어정보통신대학원 게임학과 게임디자인 전공 석사학위논문</li>
+          <li>최식원(2013). 「박물관이 지역정체성 강화에 미치는 영향」. 경기대학교 여가관광개발학과 박사학위논문</li>
+        </ul>
+      </li>
 
-   <br>
-   <li>학위 논문
-     <ul>
-        <li>강주희(2013). 「학교도서관의 역사중심 독서교육이 초등학생의 역사흥미에 미치는 영향-초등학교 3학년 학생을 대상으로-」. 경기대학교 교육대학원 사서교육전공 석사학위논문</li>
-        <li>김양(2012). 「중등학교에서의 효과적인 지방사 교수-학습 방안 연구」. 전남대학교 교육대학원 교육학과 역사교육전공 석사학위 논문</li>
-        <li>모웅서(2015). 「문화재 학습을 통한 초등학생의 역사인식 변화-철원지역 문화재를 중심으로」. 고려대학교 교육대학원 역사교육전공 석사학위논문</li>
-        <li>심은지(2019). 「고등학생의 과학의 본성 이해를 위한 과학사 롤플레잉게임(SHRPG) 개발 : 대륙이동설 스토리텔링을 중심으로」. 서울대학교 대학원 지구과학전공 석사학위논문</li>
-        <li>오명숙(2020). 「제주 지역사 교육을 위한 초등학교 연계의 박물관 문화재 활용 교육 연구」. 제주대학교 교육대학원 역사교육전공 석사학위논문</li>
-        <li>오아란(2017). 「인천지역 고등학생의 지역정체성과 지역사 학습 방안 연구-인천시립박물관 프로그램을 통하여」. 고려대학교 교육대학원 역사교육전공 석사학위논문</li>
-        <li>윤은미(2010). 「강화도 지역의 현장학습을 통한 향토사 교수학습방안」. 이화여자대학교 교육대학원 역사교육전공 석사학위논문</li>
-        <li>이명희(2009). 「고등학교 역사수업에서 지역관련 영상자료 활용방안-마산지역의 한국 근현대사를 중심으로」. 강원대학교 한국사교육 석사 학위</li>
-        <li>임예윤(2020). 「박물관을 통한 지역사 하기 교수 학습 방안 연구」. 서강대학교 교육대학원 역사교육과 석사학위논문</li>
-        <li>정형원(2004). 「교육용 게임을 위한 게임요소의 분석 및 연구」. 상명대학교 뉴미디어정보통신대학원 게임학과 게임디자인 전공 석사학위논문</li>
-        <li>최식원(2013). 「박물관이 지역정체성 강화에 미치는 영향」. 경기대학교 여가관광개발학과 박사학위논문</li>
-      </ul>
-    </li>
-
-    <br>
-    <li>기타
-      <ul>
-        <li>경기문화재연구원, 조남리지석묘, <a href="https://gjicp.ggcf.kr/archives/artwork/%ec%a1%b0%eb%82%a8%eb%a6%ac%ec%a7%80%ec%84%9d%eb%ac%98" target="_blank">https://gjicp.ggcf.kr/archives/artwork/%ec%a1%b0%eb%82%a8%eb%a6%ac%ec%a7%80%ec%84%9d%eb%ac%98</a> (검색일자: 2020.12.08)</li>
-        <li>두산백과, 조남리 지석묘, <a href="https://terms.naver.com/entry.nhn?docId=1193179&cid=40942&categoryId=33374" target="_blank">https://terms.naver.com/entry.nhn?docId=1193179&cid=40942&categoryId=33374</a> (검색일자: 2020.12.07)</li>
-        <li>디지털시흥문화대전, 윤동욱, <a href="http://siheung.grandculture.net/siheung/toc/GC06900568" target="_blank">http://siheung.grandculture.net/siheung/toc/GC06900568</a> (검색일자: 2020.12.07)</li>
-        <li>디지털시흥문화대전, 이숙번 묘, <a href="http://siheung.grandculture.net/siheung/toc/GC06900441" target="_blank">http://siheung.grandculture.net/siheung/toc/GC06900441</a> (검색일자: 2020.12.07)</li>
-        <li>디지털시흥문화대전, 조남리 지석묘, <a href="http://siheung.grandculture.net/siheung/toc/GC06900405" target="_blank">http://siheung.grandculture.net/siheung/toc/GC06900405</a> (검색일자: 2020.12.07)</li>
-        <li>오일팔닷컴 제작방법소개, <a href="https://sites.google.com/view/51840escape/제작-방법-소개?authuser=0" target="_blank">https://sites.google.com/view/51840escape/제작-방법-소개?authuser=0</a> (검색일자: 2020.11.17)</li>
-        <li>오일팔닷컴, <a href="https://sites.google.com/view/51840escape/게임을-시작하겠습니다?authuser=0" target="_blank">https://sites.google.com/view/51840escape/게임을-시작하겠습니다?authuser=0</a>(검색일자: 2020.11.17)</li>
-        <li>십일삼닷컴, <a href="https://sites.google.com/view/113escape" target="_blank">https://sites.google.com/view/113escape</a>(검색일자: 2020.11.17)</li>
-        <li>팔일오닷컴, <a href="https://sites.google.com/view/815escape" target="_blank">https://sites.google.com/view/815escape</a>(검색일자: 2020.11.17)</li>
-        <li>향토문화전자대전, 흥부저수지, <a href="https://terms.naver.com/entry.nhn?docId=5757715&cid=63856&categoryId=63934" target="_blank">https://terms.naver.com/entry.nhn?docId=5757715&cid=63856&categoryId=63934</a> (검색일자: 2020.12.07)</li>
-        <li>힌국콘텐츠진흥원, 2020 게임이용자 실태조사, <a href="http://www.kocca.kr/cop/bbs/view/B0000147/1842858.do?menuNo=201825" target="_blank">http://www.kocca.kr/cop/bbs/view/B0000147/1842858.do?menuNo=201825</a> (검색일자: 2020.12.07)</li>
-      </ul>
-    </li>
-  </ol>
+      <br>
+      <li>기타
+        <ul>
+          <li>경기문화재연구원, 조남리지석묘, <a href="https://gjicp.ggcf.kr/archives/artwork/%ec%a1%b0%eb%82%a8%eb%a6%ac%ec%a7%80%ec%84%9d%eb%ac%98" target="_blank">https://gjicp.ggcf.kr/archives/artwork/%ec%a1%b0%eb%82%a8%eb%a6%ac%ec%a7%80%ec%84%9d%eb%ac%98</a> (검색일자: 2020.12.08)</li>
+          <li>두산백과, 조남리 지석묘, <a href="https://terms.naver.com/entry.nhn?docId=1193179&cid=40942&categoryId=33374" target="_blank">https://terms.naver.com/entry.nhn?docId=1193179&cid=40942&categoryId=33374</a> (검색일자: 2020.12.07)</li>
+          <li>디지털시흥문화대전, 윤동욱, <a href="http://siheung.grandculture.net/siheung/toc/GC06900568" target="_blank">http://siheung.grandculture.net/siheung/toc/GC06900568</a> (검색일자: 2020.12.07)</li>
+          <li>디지털시흥문화대전, 이숙번 묘, <a href="http://siheung.grandculture.net/siheung/toc/GC06900441" target="_blank">http://siheung.grandculture.net/siheung/toc/GC06900441</a> (검색일자: 2020.12.07)</li>
+          <li>디지털시흥문화대전, 조남리 지석묘, <a href="http://siheung.grandculture.net/siheung/toc/GC06900405" target="_blank">http://siheung.grandculture.net/siheung/toc/GC06900405</a> (검색일자: 2020.12.07)</li>
+          <li>오일팔닷컴 제작방법소개, <a href="https://sites.google.com/view/51840escape/제작-방법-소개?authuser=0" target="_blank">https://sites.google.com/view/51840escape/제작-방법-소개?authuser=0</a> (검색일자: 2020.11.17)</li>
+          <li>오일팔닷컴, <a href="https://sites.google.com/view/51840escape/게임을-시작하겠습니다?authuser=0" target="_blank">https://sites.google.com/view/51840escape/게임을-시작하겠습니다?authuser=0</a>(검색일자: 2020.11.17)</li>
+          <li>십일삼닷컴, <a href="https://sites.google.com/view/113escape" target="_blank">https://sites.google.com/view/113escape</a>(검색일자: 2020.11.17)</li>
+          <li>팔일오닷컴, <a href="https://sites.google.com/view/815escape" target="_blank">https://sites.google.com/view/815escape</a>(검색일자: 2020.11.17)</li>
+          <li>향토문화전자대전, 흥부저수지, <a href="https://terms.naver.com/entry.nhn?docId=5757715&cid=63856&categoryId=63934" target="_blank">https://terms.naver.com/entry.nhn?docId=5757715&cid=63856&categoryId=63934</a> (검색일자: 2020.12.07)</li>
+          <li>힌국콘텐츠진흥원, 2020 게임이용자 실태조사, <a href="http://www.kocca.kr/cop/bbs/view/B0000147/1842858.do?menuNo=201825" target="_blank">http://www.kocca.kr/cop/bbs/view/B0000147/1842858.do?menuNo=201825</a> (검색일자: 2020.12.07)</li>
+        </ul>
+      </li>
+    </ol>
+  </main>
 </body>
 </html>
