--- a/2desc.html
+++ b/2desc.html
@@ -10,7 +10,7 @@
 
     gtag('config', 'G-DPSHFZW46W');
   </script>
-  <title>Mokgam History_start_game</title>
+  <title>참여방법_설명</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
   <style>@import url('https://fonts.googleapis.com/css2?family=Poor+Story&display=swap');</style>
@@ -19,15 +19,17 @@
 
 <body>
   <div class="hero-image">
-  <div class="hero-text">
-    <h1 id="hero_text">시흥시 목감지구 역사 게임</h1>
+    <div class="hero-text">
+      <h1 id="hero_text">시흥시 목감지구 역사 게임</h1>
+    </div>
   </div>
-</div>
-  <h1><img src="back.png" width=45px onclick="location.href='index.html';">&nbsp<img src="home.png" width=45px onclick="location.href='index.html';"> &nbsp &nbsp 참여방법 설명  </h1>
-  <p>원활한 게임 참여를 위해서 방법을 설명해드리겠습니다.<br>아래 버튼이 보이시죠?<br>이런 버튼이 나오면 클릭하면 됩니다.</p>
-  <input type="button" value="알겠습니다" onclick="
-    location.href='3desc.html';
-    ">
+  
+  <main>
+    <h1><img src="back.png" width=45px onclick="location.href='index.html';">&nbsp<img src="home.png" width=45px onclick="location.href='index.html';"> &nbsp &nbsp 참여방법 설명  </h1>
+    <p>원활한 게임 참여를 위해서 방법을 설명해드리겠습니다.<br>아래 버튼이 보이시죠?<br>이런 버튼이 나오면 클릭하면 됩니다.</p>
+    <input type="button" value="알겠습니다" onclick="
+      location.href='3desc.html';
+      ">
+  </main>
 </body>
-
 </html>
