--- a/index.html
+++ b/index.html
@@ -17,34 +17,40 @@
 </head>
 
 <body>
-  <div class="hero-image">
-  <div class="hero-text">
-    <h1 id="hero_text">시흥시 목감지구 역사 게임</h1>
-  </div>
-</div>
 
-  <img src="img1.jpg" width="100%">
 
-  <h3>안녕하세요! 시흥시 목감지구 역사 게임에 오신 것을 환영합니다.</h3>
+    <div class="hero-image">
+      <div class="hero-text">
+        <h1 id="hero_text">시흥시 목감지구 역사 게임</h1>
+      </div>
+    </div>
 
-  <p style="margin-bottom:30px;">
-    - <u>온라인</u>에서 진행됩니다. (현장 X)<br>
-    - 약 <u>10~15분</u> 정도 소요됩니다.<br>
-    - 부모님, 선생님은 아래 가이드를 참고해주세요.<br>
-    - 컴퓨터는 크롬에서 하시면 좋습니다. 다른 기기로 하기에는 사이즈 문제로 어려움이 있으실텐데, 추후 보완할 예정입니다.<br>
-  </p>
 
-  <input type="button" value="게임하기" onclick="
-   location.href='2desc.html'">
-  <input type="button" value="부모님과 선생님을 위한 가이드북" onclick="
-   location.href='1guidebook.html'">
+  <main>
+    <img src="img1.jpg" width="100%">
 
-  <p style="margin-top:40px;" class="addes">- 만든 날: 2020년 12월<br>
-  - 만든 이: 김서인 (서강대학교 사학과 학부생, tjdls111@naver.com) 과제의 일환으로 제작하였습니다.<br>
-  - 사진은 모두 출처를 표기했고, 출처 표기하지 않은 사진은 김서인이 촬영했습니다.<br>
-  - 이미지/캐릭터: 미리캔버스<br>
-  - 오일팔닷컴의 제작 방법 소개를 참고했습니다. <a class="link" href="https://sites.google.com/view/51840escape/%EC%A0%9C%EC%9E%91-%EB%B0%A9%EB%B2%95-%EC%86%8C%EA%B0%9C?authuser=0" target="_blank" title="오일팔닷컴의 제작 방법 소개">링크 </a></p>
+    <h3>안녕하세요! 시흥시 목감지구 역사 게임에 오신 것을 환영합니다.</h3>
 
+    <p style="margin-bottom:30px;">
+      - <u>온라인</u>에서 진행됩니다. (현장 X)<br>
+      - 약 <u>10~15분</u> 정도 소요됩니다.<br>
+      - 부모님, 선생님은 아래 가이드를 참고해주세요.<br>
+      - 컴퓨터는 크롬에서 하시면 좋습니다. 다른 기기로 하기에는 사이즈 문제로 어려움이 있으실텐데, 추후 보완할 예정입니다.<br>
+    </p>
+
+    <input type="button" value="게임하기" onclick="
+     location.href='2desc.html'">
+    <input type="button" value="부모님과 선생님을 위한 가이드북" onclick="
+     location.href='1guidebook.html'">
+   </main>
+
+  <footer class="page-footer">
+    <p style="margin-top:40px;">- 만든 날: 2020년 12월<br>
+    - 만든 이: 김서인 (서강대학교 사학과 학부생, tjdls111@naver.com) 과제의 일환으로 제작하였습니다.<br>
+    - 사진은 모두 출처를 표기했고, 출처 표기하지 않은 사진은 김서인이 촬영했습니다.<br>
+    - 이미지/캐릭터: 미리캔버스<br>
+    - 오일팔닷컴의 제작 방법 소개를 참고했습니다. <a href="https://sites.google.com/view/51840escape/%EC%A0%9C%EC%9E%91-%EB%B0%A9%EB%B2%95-%EC%86%8C%EA%B0%9C?authuser=0" target="_blank" title="오일팔닷컴의 제작 방법 소개">링크 </a></p>
+  </footer>
 
 </body>
 </html>
