back, home button- flex

--- a/3desc.html
+++ b/3desc.html
@@ -23,7 +23,16 @@
         <h1 id="hero_text">시흥시 목감지구 역사 게임</h1>
       </div>
     </div>
-    <h1> <img src="back.png" width=45px onclick="location.href='2desc.html';">&nbsp<img src="home.png" width=45px onclick="location.href='index.html';"> &nbsp &nbsp참여방법 설명 </h1>
+
+
+    <h1>
+      <div class="button_and_title">
+      <span class="back_button"> <img src="back.png" width=45px onclick="location.href='2desc.html';"> </span>
+      참여방법 설명
+      <span class="home_button"> <img src="home.png" width=45px onclick="location.href='index.html';"> </span>
+      </div>
+    </h1>
+
 
     <main>
       <script>
