--- a/3desc.html
+++ b/3desc.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <!-- Global site tag (gtag.js) - Google Analytics -->
-    <!--script async src="https://www.googletagmanager.com/gtag/js?id=G-DPSHFZW46W"></script-->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script defer src="https://www.googletagmanager.com/gtag/js?id=G-DPSHFZW46W"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
@@ -24,15 +24,11 @@
       </div>
     </div>
 
-
-    <h1>
-      <div class="button_and_title">
-      <span class="back_button"> <img src="back.png" width=45px onclick="location.href='2desc.html';"> </span>
-      참여방법 설명
-      <span class="home_button"> <img src="home.png" width=45px onclick="location.href='index.html';"> </span>
-      </div>
-    </h1>
-
+    <nav class="Nav">
+      <img src="back.png" width=45px onclick="location.href='2desc.html';">
+      <h1 class="navTitle">참여방법 설명</h1>
+      <img src="home.png" width=45px onclick="location.href='index.html';">
+    </nav>
 
     <main>
       <script>
@@ -43,7 +39,7 @@
       </script>
 
       <script>
-        document.write('빈칸에 답을 입력하고 정답 확인하기 버튼을 누르면 됩니다.<br>정답이 아니면, 다음 장으로 넘어가지 않습니다.');
+        document.write('<br>빈칸에 답을 입력하고 정답 확인하기 버튼을 누르면 됩니다.<br>정답이 아니면, 다음 장으로 넘어가지 않습니다.');
       </script>
       <div class="problem">
         연습 문제: 12월은 어떤 계절일까요?<br>
