--- a/1guidebook.html
+++ b/1guidebook.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-DPSHFZW46W"></script>
+  <script defer src="https://www.googletagmanager.com/gtag/js?id=G-DPSHFZW46W"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
@@ -24,7 +24,10 @@
       </div>
     </div>
 
-    <h1><img src="home.png" width=45px onclick="location.href='index.html';">&nbsp &nbsp 가이드북  </h1>
+    <nav class="Nav">
+      <h1 class="navTitle">부모님과 선생님을 위한 가이드북</h1>
+      <img class="navImg" src="home.png" onclick="location.href='index.html';">
+    </nav>
 
     <main>
       <ol>
