--- a/2desc.html
+++ b/2desc.html
@@ -25,9 +25,9 @@
   </div>
   <nav class="Nav">
     <h1>
-      <img src="back.png" width=45px onclick="location.href='index.html';">
+      <img class="navImg" src="back.png" onclick="location.href='index.html';">
       <h1 class="navTitle">참여방법 설명</h1>
-      <img src="home.png" width=45px onclick="location.href='index.html';">
+      <img class="navImg" src="home.png" onclick="location.href='index.html';">
     </h1>
   </nav>
 
