--- a/3desc.html
+++ b/3desc.html
@@ -25,9 +25,9 @@
     </div>
 
     <nav class="Nav">
-      <img src="back.png" width=45px onclick="location.href='2desc.html';">
+      <img class="navImg" src="back.png" onclick="location.href='2desc.html';">
       <h1 class="navTitle">참여방법 설명</h1>
-      <img src="home.png" width=45px onclick="location.href='index.html';">
+      <img class="navImg" src="home.png" onclick="location.href='index.html';">
     </nav>
 
     <main>
