font, image size: px->%

--- a/reference.html
+++ b/reference.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-DPSHFZW46W"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script defer src="https://www.googletagmanager.com/gtag/js?id=G-DPSHFZW46W"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
@@ -17,7 +17,10 @@
 </head>
 
 <body>
-  <header><h1 style="text-align:center;"> <img src="home.png" width=45px onclick="location.href='index.html';">&nbsp&nbsp참고 문헌</h1></header>
+  <nav class="Nav">
+     <h1 class="navTitle">참고 자료</h1>
+     <img class="navImg" src="home.png" onclick="location.href='index.html';">
+  </nav>
   <main>
     <ol style="margin:0px 5vh;">
       <li>일반 단행본
