--- a/reference.html
+++ b/reference.html
@@ -22,7 +22,7 @@
      <img class="navImg" src="home.png" onclick="location.href='index.html';">
   </nav>
   <main>
-    <ol style="margin:0px 5vh;">
+    <ol style="margin:5vh;">
       <li>일반 단행본
         <ul>
           <li>양호환, 이영효, 김한종, 정선영, 송상헌(2009). 『역사교육의 이론』. 책과 함께</li>
