--- a/duplicate.html
+++ b/duplicate.html
@@ -1,18 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-DPSHFZW46W"></script>
+  <script defer src="https://www.googletagmanager.com/gtag/js?id=G-DPSHFZW46W"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-
     gtag('config', 'G-DPSHFZW46W');
   </script>
   <title></title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
+  <style>@import url('https://fonts.googleapis.com/css2?family=Poor+Story&display=swap');</style>
 </head>
 
 <body>
