--- a/1guidebook.html
+++ b/1guidebook.html
@@ -55,7 +55,7 @@
       <li><h3>게임의 등장인물 '김지훈'은 실제 인물인가요?</h3>
       <h4>가상의 인물입니다.</h4></li></or>
 
-      <input type="button" value="게임 시작하기" onclick="
+      <input type="button" class='button' value="게임 시작하기" onclick="
         location.href='2desc.html';
         ">
     </main>
