--- a/2desc.html
+++ b/2desc.html
@@ -31,7 +31,7 @@
 
   <main>
     <p>원활한 게임 참여를 위해서 방법을 설명해드리겠습니다.<br>아래 버튼이 보이시죠?<br>이런 버튼이 나오면 클릭하면 됩니다.</p>
-    <input type="button" value="알겠습니다" onclick="
+    <input type="button" class="button" value="알겠습니다" onclick="
       location.href='3desc.html';
       ">
   </main>
