--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
       - 컴퓨터는 크롬에서 하시면 좋습니다. 다른 기기로 하기에는 사이즈 문제로 어려움이 있으실텐데, 추후 보완할 예정입니다.<br>
     </p>
 
-    <input type="button" value="게임하기" onclick="
+    <input type="button" class="button" value="게임하기" onclick="
      location.href='2desc.html'">
-    <input type="button" value="부모님과 선생님을 위한 가이드북" onclick="
+    <input type="button" class="button" value="부모님과 선생님을 위한 가이드북" onclick="
      location.href='1guidebook.html'">
    </main>
 
