--- a/3desc.html
+++ b/3desc.html
@@ -44,7 +44,7 @@
       <div class="problem">
         연습 문제: 12월은 어떤 계절일까요?<br>
         <input id="ans" type="text">
-        <input type="button" value="정답 확인하기" onclick="
+        <input type="button" class="button" value="정답 확인하기" onclick="
           if (answerCheck()==='겨울')
           {
             location.href='https://sites.google.com/view/mokhistory/%EC%8A%A4%ED%86%A0%EB%A6%AC1';
